discussion/kv_engine/174243/174243_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51168: Use durations in LambdaTask ctor

Change-Id: I3f4447f0776270ed0ce7ede01851d9a7fea65e2a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-29 17:54:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-29 17:59:04.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17212/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:47:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(desiredSnoozeTime.count() > 0);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:99:6: error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
std::ostream& operator<<(std::ostream& os, const SnoozeTime& snoozeTime);
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:99:31: error: no type named "ostream" in namespace "std" [clang-diagnostic-error]
std::ostream& operator<<(std::ostream& os, const SnoozeTime& snoozeTime);
                              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:406:45: error: no member named "__max" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
          return __gnu_cxx::__numeric_traits<int>::__max;
                                                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:407:51: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
        else if (__d < __gnu_cxx::__numeric_traits<int>::__min)
                                                         ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/basic_string.h:408:45: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
          return __gnu_cxx::__numeric_traits<int>::__min;
                                                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/istream.tcc:141:47: error: no member named "__min" in "__gnu_cxx::__numeric_traits<short>" [clang-diagnostic-error]
                  __n = __gnu_cxx::__numeric_traits<short>::__min;
                                                            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/istream.tcc:143:59: error: no member named "__max" in "__gnu_cxx::__numeric_traits<short>" [clang-diagnostic-error]
              else if (__l > __gnu_cxx::__numeric_traits<short>::__max)
                                                                 ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/istream.tcc:146:47: error: no member named "__max" in "__gnu_cxx::__numeric_traits<short>" [clang-diagnostic-error]
                  __n = __gnu_cxx::__numeric_traits<short>::__max;
                                                            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/istream.tcc:183:52: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
              if (__l < __gnu_cxx::__numeric_traits<int>::__min)
                                                          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/istream.tcc:186:45: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
                  __n = __gnu_cxx::__numeric_traits<int>::__min;
                                                          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/istream.tcc:188:57: error: no member named "__max" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
              else if (__l > __gnu_cxx::__numeric_traits<int>::__max)
                                                               ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/istream.tcc:191:45: error: no member named "__max" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
                  __n = __gnu_cxx::__numeric_traits<int>::__max;
                                                          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/istream.tcc:530:57: error: no member named "__max" in "__gnu_cxx::__numeric_traits<long>" [clang-diagnostic-error]
                  if (__n == __gnu_cxx::__numeric_traits<streamsize>::__max
                                                                      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/locale_facets.tcc:1266:27: error: no member named "__max" in "__gnu_cxx::__numeric_traits<char>"; did you mean "__idx"? [clang-diagnostic-error]
             && __gbeg[__idx] != __gnu_cxx::__numeric_traits<char>::__max)
                                 ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/locale_facets.tcc:1261:14: note: "__idx" declared here
      size_t __idx = 0;
             ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_bvector.h:891:50: error: no member named "__max" in "__gnu_cxx::__numeric_traits<long>" [clang-diagnostic-error]
          __gnu_cxx::__numeric_traits<difference_type>::__max
                                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:1782:46: error: no member named "__max" in "__gnu_cxx::__numeric_traits<long>" [clang-diagnostic-error]
          = __gnu_cxx::__numeric_traits<ptrdiff_t>::__max / sizeof(_Tp);
                                                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/string_conversions.h:75:50: error: no member named "__min" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
            return __val < _TRet(__numeric_traits<int>::__min)
                                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/string_conversions.h:76:48: error: no member named "__max" in "__gnu_cxx::__numeric_traits<int>" [clang-diagnostic-error]
              || __val > _TRet(__numeric_traits<int>::__max);
                                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17212/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:47:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17212/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16173/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
